--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,1 +1,8 @@
 @use "base";
+@use "ui/header";
+@use "ui/about";
+@use "ui/education";
+@use "ui/skills";
+@use "ui/works";
+@use "ui/contact";
+@use "ui/footer";
