--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -7,3 +7,5 @@ $mainTwoColor: #de8821;
 $secondaryColor: #fef3c7;
 $secondaryTwoColor: #e0f2fe;
 $mainTwoNColor: #49a7d8;
+$mainGreenColor: #2d8659; // Verde principal
+$mainGreenNColor: #b5e5c4; // Verde pastel
